examples/test/testpolicy11970.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11970
  namespace: namespace100
spec:
  podSelector:
    matchLabels:
      key34: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value39
          key23: value22
          key4: value15
      podSelector:
        matchLabels:
          key7: value14
